Fix weblate conflict for Spanish strings

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -55,7 +55,7 @@
     <string name="dns_server">Servidor DNS</string>
     <string name="apps">Apps</string>
     <string name="pcap_file">Archivo PCAP</string>
-    <string name="pcap_file_info">Crea un archivo PCAP en el almacenamiento de dispositivo</string>
+    <string name="pcap_file_info">Crea un archivo PCAP/Pcapng en el almacenamiento del dispositivo</string>
     <string name="cannot_write_file">No se puede escribir el archivo</string>
     <string name="share">Compartir</string>
     <string name="delete">Borrar</string>
@@ -482,23 +482,22 @@
     <string name="proxy_host">Host del proxy</string>
     <string name="copy_error">No se ha podido escribir el archivo</string>
     <string name="capture_interface_open_error">No se ha podido abrir la interfaz de captura</string>
-    <string name="pcap_file_not_exists">El archivo PCAP especificado no existe</string>
-    <string name="open_pcap_file">Abrir el archivo PCAP…</string>
+    <string name="pcap_file_not_exists">El archivo especificado no existe</string>
+    <string name="open_pcap_file">Abrir archivo PCAP/Pcapng…</string>
     <string name="pcap_load_success">Se ha cargado el archivo PCAP</string>
     <string name="unsupported_pcap_file">Formato de archivo de captura no compatible</string>
     <string name="decrypt_pcap_file">Descifrar archivo PCAP/Pcapng…</string>
     <string name="invalid_pcap_file">Fichero PCAP no válido</string>
     <string name="root_capture_start_failed">Fallo del inicio de captura. Asegúrate de que el dispositivo está rooteado con Magisk</string>
     <string name="pcap_read_error">Error de lectura del PCAP</string>
-    <string name="keylog_read_error">Error de lectura del registro de claves SSL</string>
-    <string name="unsupported_pcap_datalink">El archivo PCAP tiene un enlace de datos no compatible</string>
+    <string name="unsupported_pcap_datalink">El archivo tiene un enlace de datos no compatible</string>
     <string name="pcap_file_load_aborted">Carga del fichero PCAP abortada</string>
     <string name="host_resolution_failed">No se pudo resolver host %1$s</string>
     <string name="pcapdroid_trailer_notice">Para mostrar las aplicaciones actuales en lugar de \"%1$s\", asegúrate de activar la opción \"%2$s\" antes de exportar el archivo PCAP</string>
     <string name="decryption_info_no_rule">Esta conexión no se descifrará. Crea una regla de descifrado para descifrarla</string>
     <string name="tls_decryption_no_rules_notice">El descifrado TLS sólo se aplica a las conexiones que coinciden con las reglas configuradas. ¿Deseas crear las reglas de descifrado ahora\?</string>
     <string name="active_vpn_detected">Se ha detectado una VPN activa</string>
-    <string name="pcap_load_in_progress">Carga del fichero PCAP en curso, por favor espera</string>
+    <string name="pcap_load_in_progress">Carga del archivo de captura en proceso, por favor espera</string>
     <string name="root_capture_pcapd_start_failure">Fallo al realizar la captura. Asegúrate de conceder acceso root a PCAPdroid</string>
     <string name="mitm_doze_notice">La optimización de la batería puede interferir con el addon mitm</string>
     <string name="redirected">redirigido</string>
@@ -566,4 +565,19 @@
     <string name="update_available">Actualización disponible</string>
     <string name="mitm_addon_update_available">Hay una nueva actualización del complemento MITM disponible. Actualiza para obtener las últimas correcciones de errores</string>
     <string name="update_action">Actualizar</string>
+    <string name="tcp_collector_info">Colector TCP: %1$s:%2$d</string>
+    <string name="tcp_exporter">Exportador TCP</string>
+    <string name="tcp_udp_exporter">Exportador TCP/UDP</string>
+    <string name="tcp_exporter_info">Envía el PCAP a un receptor TCP remoto (pcap-sobre-ip)</string>
+    <string name="cidr_val">CIDR: %1$s</string>
+    <string name="dump_extensions">Extensiones de PCAPdroid</string>
+    <string name="dump_extensions_how_to">Cómo mostrar las extensiones de volcado PCAPdroid en Wireshark</string>
+    <string name="generate_api_key">Generar clave API</string>
+    <string name="show_api_key">Mostrar clave API</string>
+    <string name="api_key">Clave API</string>
+    <string name="ip_address_or_cidr">Dirección IP / CIDR</string>
+    <string name="errno_enetdown">La red está caída</string>
+    <string name="errno_enetreset">Restablecer red</string>
+    <string name="errno_econnrefused">Conexión rechazada</string>
+    <string name="error_code_with_text">%1$s (error %2$d)</string>
 </resources>
