Update Arabic strings

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -439,13 +439,7 @@
     <string name="block_private_dns">حظر DNS الخاص</string>
     <string name="low_memory">الذاكرة منخفضة</string>
     <string name="remote_server_warning">لأسباب أمنية، غير مسموح بإرسال حركة المرور إلى الخادم البعيد \"%1$s\"</string>
-    <string name="tls_decryption_with_root_msg">تعد القدرة على تشغيل فك تشفير TLS باستخدام الجذر ميزة تجريبية. هذه قائمة بالأخطاء المعروفة:
-\n
-\n- في PCAPdroid، ستشاهد حركة المرور كما تم إنشاؤها من تطبيق mitm-addon بدلاً من التطبيق الأصلي
-\n- عند تعيين مرشح التطبيق، سيتم فك التشفير فقط للتطبيق المستهدف، ولكن PCAPdroid سيظل يعرض حركة مرور التطبيقات الأخرى
-\n- إذا فشل بدء الالتقاط، فتأكد من أنه يمكنك بالفعل تشغيل أمر iptables كجذر (على سبيل المثال عبر termux)
-\n- قد لا يعمل هذا على نظام Android 12 والإصدارات الأحدث
-\n- إذا كان تطبيق VPN قيد التشغيل، فيجب عليك إما استهداف تطبيق معين لفك التشفير أو استبعاد ملحق PCAPdroid mitm من VPN، وإلا ستستمر حركة المرور في حلقة</string>
+    <string name="tls_decryption_with_root_msg">تعد القدرة على تشغيل فك تشفير TLS باستخدام الجذر ميزة تجريبية. هذه قائمة بالأخطاء المعروفة: \n \n- في PCAPdroid، ستشاهد حركة المرور كما تم إنشاؤها من تطبيق mitm-addon بدلاً من التطبيق الأصلي \n- عند تعيين مرشح التطبيق، سيتم فك التشفير فقط للتطبيق المستهدف، ولكن PCAPdroid سيظل يعرض حركة مرور التطبيقات الأخرى \n- إذا فشل بدء الالتقاط، فتأكد من أنه يمكنك بالفعل تشغيل أمر iptables كجذر (على سبيل المثال عبر termux) \n- قد لا يعمل هذا على نظام Android 12 والإصدارات الأحدث \n- إذا كان تطبيق VPN قيد التشغيل، فيجب عليك إما استهداف تطبيق معين لفك التشفير أو استبعاد ملحق PCAPdroid mitm من VPN، وإلا ستستمر حركة المرور في حلقة</string>
     <string name="access_paid_features_msg">راجع <a href="%1$s">دليل المستخدم</a> للتعرف على كيفية الوصول إلى الميزات المدفوعة</string>
     <string name="paid_feature">مِيزة مدفوعة</string>
     <string name="firewall_whitelist_notice">في هذا الوضع، سيتم حظر جميع الاتصالات، ما لم يتم إدراجها يدويًا في القائمة البيضاء. قد تفوتك إشعارات الدفع بدون قائمة بيضاء مناسبة</string>
